[package]
name = "spawn-lnd"
version = "0.1.0"
edition = "2024"
description = "Docker-backed Bitcoin Core and LND regtest clusters for Rust integration tests"
license = "MIT"
repository = "https://github.com/niteshbalusu11/spawn-lnd"
homepage = "https://github.com/niteshbalusu11/spawn-lnd"
documentation = "https://docs.rs/spawn-lnd"
readme = "README.md"
keywords = ["bitcoin", "lightning", "lnd", "regtest", "docker"]
categories = ["development-tools::testing"]

[dependencies]
base64 = "0.22"
bollard = "0.19"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
hyper = "1"
lnd_grpc_rust = "2.15.0"
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
